fix: Remove unused files and update dependencies fix interfaces

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "gen-types": "lib/contentrain-type-gen.ts"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
